FIX: wrong position for change email instructions

--- a/app/assets/stylesheets/desktop/user.scss
+++ b/app/assets/stylesheets/desktop/user.scss
@@ -48,6 +48,9 @@
     font-size: 80%;
     line-height: 1.4em;
   }
+  .form-horizontal .instructions {
+    display: block;
+  }
   .avatar {
     margin-left: 3px;
   }
